[tool.poetry]
name = "usrl-colormaps"
version = "0.0.1"
description = "Matolotlib colormaps for the Uppsala Social Robotics Lab."
authors = ["Sebastian Wallkötter <sebastian.wallkotter@it.uu.se>"]

[tool.poetry.dependencies]
python = ">=3.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
