[tool.poetry]
name = "usrl_colormaps"
version = "1.0.0"
description = "Matolotlib colormaps for the Uppsala Social Robotics Lab."
authors = ["Sebastian Wallkötter <sebastian.wallkotter@it.uu.se>"]

[tool.poetry.dependencies]
python = ">=3.7"
numpy = "^1.20"

[tool.poetry.dev-dependencies]
ipykernel = "^6.13.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
